package com.cesar.school.core.shared;

public enum Role {
    DEV,
    QA,
    PO,
    LIDER
}
